# espire

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  component.mk  partitions.csv  version.sh
components/esp32-thermistor/: CMakeLists.txt  thermistor.c
components/esp32-thermistor/include/: thermistor.h
components/ftplib/: CMakeLists.txt
components/tft/: CMakeLists.txt  ili9340.c  ili9340.h
main/: CMakeLists.txt  Kconfig.projbuild  adc2.c  api.c  auto.c  auto.c,BAK  button.c  check.c  co2.c  config.c  device.c  dummy.c  ftp.c  heap.c  heating.c  http.c  httpd.c  log.c  main.c  metar.c  module.c  ntp.c  nv.c  oled.c  ota.c  owm.c  ping.c  relay.c  shmu.c  temp.c  util.c  widgets.c  wifi.c
main/font/: small5x3.h
main/include/: adc2.h  api.h  auto.h  button.h  check.h  co2.h  config.h  device.h  dummy.h  ftp.h  heap.h  heating.h  http.h  httpd.h  log.h  metar.h  module.h  ntp.h  nv.h  oled.h  ota.h  owm.h  ping.h  relay.h  shmu.h  temp.h  util.h  widgets.h  wifi.h
util/: collect.py  collect.service  shmu.py  thudp.py
